# rust-auth-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.override.yml  compose.yml  nginx.conf  nginx.dev.conf
.github/workflows/: cd.yml  ci.yml  prod.yml
app-service/: Cargo.toml
app-service/src/: main.rs
app-service/templates/: index.html
auth-service/: Cargo.toml
auth-service/.sqlx/: query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8a657eddd043a2c70ad6ae4c484d8e3573d29674d063a0aa9cdb8585b54830a6.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
auth-service/assets/: app.js  index.html
auth-service/config/: base.toml  dev.toml  prod.toml  test.toml
auth-service/migrations/: 20250916150750_create_users_table.up.sql
auth-service/src/: api.rs  app_state.rs  auth.rs  config.rs  domain.rs  lib.rs  main.rs  models.rs  persistence.rs  postgres.rs  redis.rs  routes.rs
auth-service/src/api/: app_state.rs  routes.rs
auth-service/src/api/extractors/: auth.rs  validation.rs
auth-service/src/api/middleware/: auth.rs
auth-service/src/domain/: data_stores.rs  error.rs  user.rs
auth-service/src/models/: two_fa.rs  user.rs
auth-service/src/persistence/: in_memory_2fa_code_store.rs  in_memory_banned_token_store.rs  in_memory_user_store.rs  pg_user_store.rs  redis_2fa_code_store.rs  redis_banned_user_store.rs
auth-service/src/service/: auth.rs  email.rs
auth-service/src/service/email/: mock_email_client.rs
auth-service/src/services/: hashmap_user_store.rs  hashset_banned_token_store.rs
auth-service/tests/api/: common.rs  helpers.rs  routes.rs
nginx/: nginx.conf
