[workspace]
members = [
    "auth-service",
    "app-service",
]
resolver = "2"

[workspace.dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }

# Auth service specific
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = { version = "0.20.0", features = ["derive"] }

# App service specific
axum-extra = { version = "0.10.1", features = ["cookie"] }
askama = "0.14.0"
