[workspace]
members = ["auth-service", "app-service"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1", features = ["cookie"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "cookies",
] }
cookie = { version = "0.18.1" }
thiserror = { version = "2.0.10" }

# Auth service specific
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = { version = "0.1.89" }
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "9.1.1" }
config = { version = "0.15.7" }
dotenvy = { version = "0.15.7" }

# App service specific
askama = { version = "0.14.0" }

# Test dependencies
reqwest_cookie_store = { version = "0.9.0" }

