[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
cookie = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
reqwest_cookie_store = { workspace = true }
rstest = { workspace = true }
